name:                heroku-cron
version:             0.1.0.0
synopsis:            A simple cron-like process to run in worker dyno.
description:         README at https://github.com/futurice/heroku-cron
homepage:            https://github.com/futurice/heroku-cron
license:             MIT
license-file:        LICENSE
author:              Oleg Grenrus
maintainer:          oleg.grenrus@iki.fi
copyright:           (c) 2015 Futurice
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable heroku-cron
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.9, yaml, process, bytestring, time, unordered-containers
  default-language:    Haskell2010
  ghc-options:         -Wall
